--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     api project(':base')
 
     implementation 'com.github.jnr:jffi:1.3.12'
+    api 'com.github.jnr:jffi:1.3.12'
     implementation 'com.github.jnr:jffi:1.3.12:native'
 }
 
